// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Rotate180 render with transformation 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      class="transition-transform duration-150 ease-[cubic-bezier(0.4,0,0.2,1)] rotate-180"
    >
      Rotating component
    </div>
  </div>
</div>
`;

exports[`Rotate180 render without transformation 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      class="transition-transform duration-150 ease-[cubic-bezier(0.4,0,0.2,1)]"
    >
      Rotating component
    </div>
  </div>
</div>
`;
